src/test/deca/syntax/valid/synt/include_without_spaces.deca
/*
    Description : inclusion d'un fichier sans mettre d'espace entre include et les guillemets

    Résultat : OK
*/
#include"open_brace.decah"
#include"println_close_brace.decah"
