src/test/deca/syntax/invalid/synt/circular_include.deca
/*
    Description : inclusion circulaire

    Résultat : Erreur sur analyse lexicale
*/
#include "a_include_b.deca"
